# VTL-GUI

./: .gitignore  CMakeLists.txt  LJ.speaker  README.md  fsew0_316_pred.pkl  setup.py
Sources/: tmp.txt
Sources/Backend/: AnatomyParams.cpp  IirFilter.h  SoundLib.cpp  Surface.h  Synthesizer.cpp  TdsModel.cpp  TdsModel.h  TimeFunction.cpp  Tube.cpp  VTLApi_pybind.cpp  VocalTract.cpp  VocalTract.h  VocalTractLabApi.cpp  VocalTractLabApi.h  VocalTractLabApi_backup.cpp  VocalTractLabApi_backup.h  VocalTractPicture.cpp  VocalTractPicture.h
Sources/Frontend/: Data.cpp  VocalTractPicture.cpp  VocalTractPicture.h
